--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PhanHoiKH"></activity>
+        <activity android:name=".ThongBao.PhanHoiKH"></activity>
         <activity android:name=".ThongTinCuaHang.SuaThongTin" />
         <activity android:name=".dsden" />
         <activity android:name=".QLKhachHang" />
