--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,19 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'androidx.cardview:cardview:1.0.0'
 //    implementation'com.google.android.gms.dynamite.descriptors.com.google.firebase.auth.ModuleDescriptor'
-    implementation 'com.google.firebase:firebase-auth'
+//    implementation 'com.google.firebase:firebase-auth'
+    
+
+    // FirebaseUI for Firebase Realtime Database
+    implementation 'com.firebaseui:firebase-ui-database:7.1.1'
+    // FirebaseUI for Cloud Firestore
+//    implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
+//
+//    // FirebaseUI for Firebase Auth
+   implementation 'com.firebaseui:firebase-ui-auth:7.1.1'
+//
+//    // FirebaseUI for Cloud Storage
+   implementation 'com.firebaseui:firebase-ui-storage:7.1.1'
 
     // Also declare the dependency for the Google Play services library and specify its version
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
